# ai-agents

./: .env_example  .gitignore  README.md  alfred_langgraph.ipynb  app.py  final_project.app.py  pyproject.toml  smolagents.ipynb
src/: gradio_ui.py
src/agents/: __init__.py  alfred.py  boss.py  gaia.py
src/first_agent/: .env_example  agent.json  app.py  prompts.yaml
src/first_agent/tools/: __init__.py  current_time.py
src/prompts/: gaia.prompts.yaml
src/tools/: __init__.py  final_answer.py  guest_info_retriever.py  suggest_menu.py  visit_webpage.py  web_search.py
src/utils/: _agents.py  _llm_provider.py
