[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes errors
    "W",  # pycodestyle warnings
    "C",  # mccabe complexity checker
    "B",  # bugbear best practices checker
    "T",  # mypy type errors
    "B",  # flake8-bugbear best practices checker
    "I001",  # isort import order
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "setup.py",
    "build",
    "dist",
    "releases",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
]
line-length = 120
indent-width = 4

[project]
name = "ai_agents"
version = "0.1.0"
description = "A collection of AI agents for various tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.0.4",
    "gradio>=5.34.0",
    "markdownify>=1.1.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "smolagents>=1.18.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "ruff>=0.11.13",
]
